fixing google drive auth token update - adjust z-index of preference modal

--- a/css/main.css
+++ b/css/main.css
@@ -790,3 +790,7 @@ span {
   from { -webkit-transform: rotate(0deg); }
   to { -webkit-transform: rotate(360deg); }
 }
+
+.modal-backdrop {
+  z-index: 1 !important;
+}
